// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-checkbox css-dfdulk"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
    </label>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkbox field 2`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-checkbox css-dfdulk"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
    </label>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-20-label"
    />
    <label
      className="chakra-checkbox css-1y749xz"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root_0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
        value="foo"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <div
        className="chakra-checkbox__label css-1oeb2oe"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <label
          className="chakra-form__label css-blblvf"
          htmlFor="root_0"
          id="field-20-label"
        >
          foo
        </label>
      </div>
    </label>
    <label
      className="chakra-checkbox css-1y749xz"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root_1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
        value="bar"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <div
        className="chakra-checkbox__label css-1oeb2oe"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <label
          className="chakra-form__label css-blblvf"
          htmlFor="root_1"
          id="field-20-label"
        >
          bar
        </label>
      </div>
    </label>
    <label
      className="chakra-checkbox css-1y749xz"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root_2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
        value="fuzz"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <div
        className="chakra-checkbox__label css-1oeb2oe"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <label
          className="chakra-form__label css-blblvf"
          htmlFor="root_2"
          id="field-20-label"
        >
          fuzz
        </label>
      </div>
    </label>
    <label
      className="chakra-checkbox css-1y749xz"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-disabled={false}
        checked={false}
        className="chakra-checkbox__input"
        disabled={false}
        id="root_3"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="checkbox"
        value="qux"
      />
      <div
        aria-hidden={true}
        className="chakra-checkbox__control css-dnty2r"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <div
        className="chakra-checkbox__label css-1oeb2oe"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <label
          className="chakra-form__label css-blblvf"
          htmlFor="root_3"
          id="field-20-label"
        >
          qux
        </label>
      </div>
    </label>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-12-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-12"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "format": "color",
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="color"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-13-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-13"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "format": "date",
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="date"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-14-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-14"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "format": "datetime",
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="datetime-local"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-24"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="text"
      uiSchema={
        Object {
          "classNames": undefined,
          "ui:options": Object {
            "label": false,
          },
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-9-label"
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-8-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-8"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "number",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      step="any"
      type="number"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value={0}
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-7-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "number",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      step="any"
      type="number"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-15-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-15"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="password"
      uiSchema={
        Object {
          "classNames": undefined,
          "ui:widget": "password",
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-21-label"
    />
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <div
        className="chakra-radio-group css-0"
        isInline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        role="radiogroup"
      >
        <label
          className="chakra-radio css-q1tsvp"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="field-22"
            name="fp2b4cg448ebrz2k6ndt5"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            readOnly={false}
            required={false}
            style={
              Object {
                "border": "0px",
                "clip": "rect(0px, 0px, 0px, 0px)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0px",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="true"
          />
          <div
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <div
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            Yes
          </div>
        </label>
        <label
          className="chakra-radio css-q1tsvp"
        >
          <input
            checked={false}
            className="chakra-radio__input"
            disabled={false}
            id="field-22"
            name="fp2b4cg448ebrz2k6ndt5"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            readOnly={false}
            required={false}
            style={
              Object {
                "border": "0px",
                "clip": "rect(0px, 0px, 0px, 0px)",
                "height": "1px",
                "margin": "-1px",
                "overflow": "hidden",
                "padding": "0px",
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": "1px",
              }
            }
            type="radio"
            value="false"
          />
          <div
            aria-hidden={true}
            className="chakra-radio__control css-ssalds"
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          />
          <div
            className="chakra-radio__label css-1y8kf23"
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            No
          </div>
        </label>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-17-label"
    />
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        autoFocus={false}
        className="chakra-select css-1p4gbel"
        disabled={false}
        id="root"
        multiple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        value=""
      >
        <option
          value=""
        >
          
        </option>
        <option
          value="foo"
        >
          foo
        </option>
        <option
          value="bar"
        >
          bar
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
        data-disabled={false}
      >
        <svg
          aria-hidden={true}
          className="chakra-select__icon"
          focusable={false}
          role="presentation"
          style={
            Object {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-5-label"
    />
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-3-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "format": "email",
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="email"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-4-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "format": "uri",
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="url"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-1-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-1"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="text"
      uiSchema={
        Object {
          "classNames": undefined,
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-6-label"
    />
    <input
      autoFocus={false}
      className="chakra-input form-control css-0"
      disabled={false}
      formContext={Object {}}
      id="field-6"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      readOnly={false}
      registry={
        Object {
          "ArrayFieldTemplate": [Function],
          "FieldTemplate": [Function],
          "ObjectFieldTemplate": [Function],
          "definitions": Object {},
          "fields": Object {
            "AnyOfField": [Function],
            "ArrayField": [Function],
            "BooleanField": [Function],
            "DescriptionField": [Function],
            "NullField": [Function],
            "NumberField": [Function],
            "ObjectField": [Function],
            "OneOfField": [Function],
            "SchemaField": [Function],
            "StringField": [Function],
            "TitleField": [Function],
            "UnsupportedField": [Function],
          },
          "formContext": Object {},
          "rootSchema": Object {
            "type": "string",
          },
          "widgets": Object {
            "AltDateTimeWidget": [Function],
            "AltDateWidget": [Function],
            "BaseInput": [Function],
            "CheckboxWidget": [Function],
            "CheckboxesWidget": [Function],
            "ColorWidget": [Function],
            "DateTimeWidget": [Function],
            "DateWidget": [Function],
            "EmailWidget": [Function],
            "FileWidget": [Function],
            "HiddenWidget": [Function],
            "PasswordWidget": [Function],
            "RadioWidget": [Function],
            "RangeWidget": [Function],
            "SelectWidget": [Function],
            "TextWidget": [Function],
            "TextareaWidget": [Function],
            "URLWidget": [Function],
            "UpDownWidget": [Function],
            "radio": [Function],
            "select": [Function],
          },
        }
      }
      required={false}
      type="text"
      uiSchema={
        Object {
          "classNames": undefined,
          "ui:placeholder": "placeholder",
        }
      }
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-16-label"
    />
    <textarea
      autoFocus={false}
      className="chakra-textarea css-0"
      disabled={false}
      id="root"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      required={false}
    />
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="chakra-form-control css-1w4uldl"
    role="group"
  >
    <label
      className="chakra-form__label css-1hbfay1"
      htmlFor="root"
      id="field-11-label"
    />
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;
